# receipts

./: .gitignore  AWS_DEPLOY.md  BUILDLOG.md  DEMO_SCRIPT.md  README.md  VSCODE_EXTENSION.md  pyproject.toml
.github/workflows/: deploy-demo.yml  publish-live-evidence.yml  verify-vscode-extension.yml
action/: action.yml  evaluate_gate.py  post_comment.sh  render_card.py
docs/: dashboard.js  index.html  replay.html  sample-session.json
examples/: receipts-pr.yml
infra/aws/: receipts-demo.template.json
receipts/: __init__.py  analysis.py  capture.py  card.py  cli.py  demo.py  gate.py  integrity.py  public_feed.py  replay.py  tour.py
receipts/demo_data/: baseline_agent.sh  live_agent.sh  sample-session.json  sample_tour.md
sample-project/: README.md
sample-project/src/auth/: login.py
sample-project/tests/: test_login.py
tests/: test_action_dry_run.py  test_analysis.py  test_attribution.py  test_aws_demo_iac.py  test_card.py  test_docs_landing.py  test_gate.py  test_public_feed.py  test_replay_tour.py  test_vscode_extension.py
tests/fixtures/: go_test.txt  jest.txt  pytest.txt
tools/: build_public_sample.py  fake_agent.sh  package_vscode_extension.py
vscode-receipts/: .vscodeignore  CHANGELOG.md  README.md  extension.js  package.json
vscode-receipts/lib/: receipt-model.js
vscode-receipts/test/: receipt-model.test.js
