[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "receipts"
version = "0.1.0"
description = "Tamper-evident session evidence for AI-generated code"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Receipts contributors"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX",
]

[project.scripts]
receipts = "receipts.cli:main"

[tool.setuptools]
packages = ["receipts"]

